# base_bot

./: .env-example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
api/: __main__.py
api/handlers/: __init__.py  hello.py
app/: __main__.py  alembic.ini
app/alembic/: env.py
app/api/: __init__.py  telegram.py
app/handlers/: __init__.py  echo.py
app/src/: __init__.py  settings.py
app/src/database/: __init__.py  connection.py  models.py
app/src/dependencies/: telegram.py
app/src/middlewares/bot/: __init__.py  database_session.py  locale.py  repositories.py
app/src/repositories/: __init__.py  abstract.py  alchemy.py  user.py
app/src/states/hr/: __init__.py  user.py
app/src/types/: __init__.py  base.py  custom.py  user.py
bot/: __main__.py
bot/handlers/: __init__.py  start.py
src/: settings.py
src/database/: connection.py  models.py
src/dependencies/: __init__.py  telegram.py
src/middlewares/bot/: __init__.py  locale.py
src/types/: custom.py
